# sri_modelling

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json  configuration.h  csv_visualized.html  main.cpp  performance.md  person.h  population.cpp  population.h  read_csv.ipynb  script.js  statistics.h  workspace.code-workspace
.ipynb_checkpoints/: read_csv-checkpoint.ipynb
Population/: CMakeLists.txt  configuration.h  csv-export.h  enums.h  person.cpp  person.h  population.cpp  population.h  random.h  simulation.h  statistics.h
node/: app.js  package-lock.json  package.json
node/public/: index.html
node/public/js/: new_script.js  script.js  simplistic.js  updateGraphZoom.js
tests/: test.cpp
